# papyrus

./: .gitignore  Cargo.toml  PORTING_GUIDE.md  README.md  papyrus.toml
assets/: style.css
content/: 01-introduction.md
src/: assets.rs  cli.rs  config.rs  epub.rs  error.rs  html.rs  main.rs  markdown.rs  pdf.rs
templates/: pdf_dark_bg_wkhtmltopdf.css  pdf_footer.html  pdf_page.css  pdf_page_dark.css  pdf_toc.css
templates/stubs/assets/: style.css  theme-dark.html  theme-html.html  theme-light.html
templates/stubs/content/: 01-introduction.md  02-installation.md  03-quick-start.md  04-configuration.md  05-writing-content.md  06-themes-and-styling.md  07-generating-ebooks.md  08-cover-images.md
