[package]
name = "papyrus"
version = "0.1.0"
edition = "2024"
authors = ["Nuruzzaman Milon <contact@milon.im>"]
description = "A Rust tool that helps you write eBooks in markdown and convert to PDF, EPUB and HTML"
license = "MIT"
repository = "https://github.com/milon/papyrus"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# Markdown parsing
pulldown-cmark = "0.9"
gray_matter = "0.2"

# HTML generation and templating
tera = "1.19"
html5ever = "0.27"
select = "0.6"

# EPUB generation
zip = "0.6"
flate2 = "1.0"

# Syntax highlighting
syntect = "5.1"

# File operations
walkdir = "2.4"
glob = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.10"
chrono = "0.4"

# PDF generation (we'll use external tools, but need process execution)
tokio = { version = "1.35", features = ["full"] }

# UUID generation for EPUB
uuid = { version = "1.6", features = ["v4"] }
